--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <div class="header">
         <h1> Hey how's it goin? </h1>           
-        <P> sup my fellow people. I am dead inside.</P>
+        <P> sup my fellow people</P>
     </div>
     
     <img src="img/The bible.jpg" alt="Italian Trulli">
