--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first webpage</title>
 </head>
-<body style="background-color:#35675b"></body>
-
-    <div class="header">
-        <h1> Hey how's it goin? </h1>           
-        <P> sup my fellow people</P>
-    </div>
-    
-    <img src="img/The bible.jpg" alt="Italian Trulli">
-    <html>
-       <iframe width="560" height="315" src="https://www.youtube.com/embed/zAjJYkUnTEs?si=N1tIk4V7ILou4WvM" title="YouTube video player" frameborder="25" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-      </html>
+<body> 
+<img src="img/Profile.jpg" alt="This is me in Paris">
+<header> <h1> Kay van den Boomen</h1> <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas rhoncus vel neque eu pellentesque. Sed mi magna, vehicula eu mi quis, lacinia tristique dolor. Cras interdum ipsum ante, eu finibus dui volutpat in. Maecenas auctor odio a venenatis mattis. Phasellus pretium interdum urna id euismod. Donec cursus feugiat elit, vitae suscipit urna ornare sit amet. Aenean vel tincidunt massa. Suspendisse.</p></header>
+<h2> Hobbies</h2>
+<ul>
+    <li> Gaming</li>
+    <li> Meeting with friends</li>
+    <li> Dungeons and Dragons</li>
+    <Li> excersising </Li>
+</ul>
+<img src="img/Gaming.jpg" alt="I like gaming">
+<img src="img/Dnd.jpg" alt="Dungeons and dragons">
+<img src="img/Logo.jpg">
+<img src="img/Logo3.jpg">
+<img src="img/Logo4.jpg">
+<img src="img/logo2.jpg">
 </body>
 </html>
