--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body> 
 <img src="img/Profile.jpg" alt="This is me in Paris">
+<P> This was me in Paris</P>
 <header> <h1> Kay van den Boomen</h1> <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas rhoncus vel neque eu pellentesque. Sed mi magna, vehicula eu mi quis, lacinia tristique dolor. Cras interdum ipsum ante, eu finibus dui volutpat in. Maecenas auctor odio a venenatis mattis. Phasellus pretium interdum urna id euismod. Donec cursus feugiat elit, vitae suscipit urna ornare sit amet. Aenean vel tincidunt massa. Suspendisse.</p></header>
 <h2> Hobbies</h2>
 <ul>
