--- a/index.html
+++ b/index.html
@@ -17,22 +17,26 @@
      Maecenas auctor odio a venenatis mattis. Phasellus pretium interdum.</p>
 </div>
 
+<div class="reset"> </div>
 </header>
 
 
+<div id="hobbycontainer">
+    <h2> Hobbies</h2>
+    <ul>
+        <li> Gaming</li>
+        <li> Meeting with friends</li>
+        <li> Dungeons and Dragons</li>
+        <li> excersising </li>
+    </ul>
+</div> 
+<img id="dnd" src="img/Dnd.jpg" alt="Dungeons and dragons">
 
-<h2> Hobbies</h2>
-<ul>
-    <li> Gaming</li>
-    <li> Meeting with friends</li>
-    <li> Dungeons and Dragons</li>
-    <Li> excersising </Li>
-</ul>
-<img src="img/Gaming.jpg" alt="I like gaming">
-<img src="img/Dnd.jpg" alt="Dungeons and dragons">
-<img src="img/Logo.jpg">
-<img src="img/Logo3.jpg">
-<img src="img/Logo4.jpg">
-<img src="img/logo2.jpg">
+<div class="reset"></div>
+<img id="Heroshot" src="img/Gaming.jpg" alt="I like gaming">
+<img class="socialmedia" src="img/Logo.jpg">
+<img class="socialmedia" src="img/Logo3.jpg">
+<img class="socialmedia" src="img/Logo4.jpg">
+<img class="socialmedia" src="img/logo2.jpg">
 </body>
 </html>
