--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first webpage</title>
 </head>
+
 <body> 
+    <div id="maincontainer">
 <img src="img/Profile.jpg" id="Intropicture" imgalt="This is me in Paris">
 <P> This was me in Paris</P>
 <header>
@@ -38,5 +40,6 @@
 <img class="socialmedia" src="img/Logo3.jpg">
 <img class="socialmedia" src="img/Logo4.jpg">
 <img class="socialmedia" src="img/logo2.jpg">
+</div>
 </body>
 </html>
