--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
 
 <div class="reset"></div>
 <img id="Heroshot" src="img/Gaming.jpg" alt="I like gaming">
-<img class="socialmedia" src="img/Logo.jpg">
-<img class="socialmedia" src="img/Logo3.jpg">
-<img class="socialmedia" src="img/Logo4.jpg">
-<img class="socialmedia" src="img/logo2.jpg">
+<div class="socialmedia"><img src="img/Logo.jpg"></div>
+<div class="socialmedia"> <img src="img/Logo3.jpg"> </div>
+<div class="socialmedia"><img src="img/Logo4.jpg"></div>
+<div class="socialmedia"> <img src="img/logo2.jpg"></div>
+<div class="reset"></div>
+<h1 go fuck yourself></h1>
 </div>
 </body>
 </html>
