--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>My first webpage</title>
 </head>
 
-<body> 
+ 
+<body background="img/4080145.jpg">
     <div id="maincontainer">
 <img src="img/Profile.jpg" id="Intropicture" imgalt="This is me in Paris">
 <P> This was me in Paris</P>
@@ -41,7 +42,6 @@
 <div class="socialmedia"><img src="img/Logo4.jpg"></div>
 <div class="socialmedia"> <img src="img/logo2.jpg"></div>
 <div class="reset"></div>
-<h1 go fuck yourself></h1>
 </div>
 </body>
 </html>
