--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
 <div class="socialmedia"><img src="img/Logo4.jpg"></div>
 <div class="socialmedia"> <img src="img/logo2.jpg"></div>
 <div class="reset"></div>
+<div id="paddingtest">
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas rhoncus vel neque eu pellentesque.
+        Sed mi magna, vehicula eu mi quis, lacinia tristique dolor. Cras interdum ipsum ante, eu finibus dui volutpat in. 
+        Maecenas auctor odio a venenatis mattis. Phasellus pretium interdum.</p>
+</div>
 </div>
 </body>
 </html>
