links en padding

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>My first webpage</title>
 </head>
 
+<body>
+    <div id="mainContainer">
+        <div id="navigation">
+            <a href="file:///C:/Users/kaybo/OneDrive/Documenten/My%20first%20Webpage/Myfirsthtml/index.html">home</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D">Don't click</a>
+        </div>
  
 <body background="img/4080145.jpg">
     <div id="maincontainer">
@@ -37,10 +43,14 @@
 
 <div class="reset"></div>
 <img id="Heroshot" src="img/Gaming.jpg" alt="I like gaming">
-<div class="socialmedia"><img src="img/Logo.jpg"></div>
-<div class="socialmedia"> <img src="img/Logo3.jpg"> </div>
-<div class="socialmedia"><img src="img/Logo4.jpg"></div>
-<div class="socialmedia"> <img src="img/logo2.jpg"></div>
+<div class="socialmedia">
+    <a href="https://discord.com/" target="_blank"><img src="img/Logo.jpg"></a></div>
+<div class="socialmedia"> 
+    <a href="https://www.instagram.com/kayvdboomen/" target="_blank"> <img src="img/logo3.png"> </div> </a>
+<div class="socialmedia"> 
+    <a href="https://www.youtube.com/channel/UCx30vt0Q1-iRssacgdrvRtw" target="_blank"><img src="img/Logo4.jpg"></div> </a>
+<div class="socialmedia"> 
+    <a href="https://www.reddit.com/user/Certain-Ask-5723" target="_blank"><img src="img/logo2.jpg"></div> </a>
 <div class="reset"></div>
 <div id="paddingtest">
     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas rhoncus vel neque eu pellentesque.
