Picture change with link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li> excersising </li>
     </ul>
 </div> 
-<img id="dnd" src="img/Dnd.jpg" alt="Dungeons and dragons">
+<a href="file:///C:/Users/kaybo/OneDrive/Documenten/My%20first%20Webpage/Myfirsthtml/foto.html" target="_blank"><img id="dnd" src="img/Dnd.jpg" alt="Dungeons and dragons"> </a>
 
 <div class="reset"></div>
 <img id="Heroshot" src="img/Gaming.jpg" alt="I like gaming">
