--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="mainContainer">
         <div id="navigation">
             <a href="file:///C:/Users/kaybo/OneDrive/Documenten/My%20first%20Webpage/Myfirsthtml/index.html">home</a>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D">Don't click</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" target="_blank">Don't click</a>
         </div>
  
 <body background="img/4080145.jpg">
