--- a/foto.html
+++ b/foto.html
@@ -7,6 +7,10 @@
     <title> The prettiest princess</title>
 </head>
 <body>
+    <div id="navigation">
+        <a href="file:///C:/Users/kaybo/OneDrive/Documenten/My%20first%20Webpage/Myfirsthtml/index.html">home</a>
+    </div>
+    
    
    <div id="photo"> 
     <img src="img/Matther mercer.jpg" alt=""> 
