--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="mainContainer">
         <div id="navigation">
-            <a href="file:///C:/Users/kaybo/OneDrive/Documenten/My%20first%20Webpage/Myfirsthtml/index.html">home</a>
+            <a href="file:///C:/Users/kaybo/OneDrive/Documenten/My%20first%20Webpage/Myfirsthtml/foto.html">other</a>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" target="_blank">Don't click</a>
         </div>
  
