--- a/foto.html
+++ b/foto.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="navigation">
-        <a href="file:///C:/Users/kaybo/OneDrive/Documenten/My%20first%20Webpage/Myfirsthtml/index.html">home</a>
+        <a href="index.html">home</a>
     </div>
     
    
